# synthetic-data-optimizer

./: .gitignore  README.md  analyze_param_convergence_histograms.py  pyproject.toml  run_experiment.py  run_quick_experiment.py
configs/: experiment_config.yaml  test_experiment_config.yaml
data/: dummy_params.csv
data/base_chips/: README.md
notebooks/: test_experiment_runner.ipynb  test_phase2_ml_components.ipynb  test_sampler_generator.ipynb  test_void_generator.ipynb
plans/: infrastructure_design.md  optuna_optimizer_implementation.md  parameter_calibration_approach.md
src/data_generation/: mock_data_generator.py  parameter_sampler.py  void_generator.py
src/embedding/: dinov2_embedder.py  pca_projector.py
src/optimization/: metrics.py  optimizer_placeholder.py  optuna_optimizer.py
src/orchestration/: __init__.py  experiment_runner.py  iteration_manager.py
src/utils/: bounds_inference.py
src/visualization/: experiment_reporter.py
tests/: conftest.py  test_grouped_optimizer.py  test_metrics.py  test_optuna_integration_e2e.py  test_optuna_optimizer.py
