[project]
name = "synthetic-data-optimizer"
version = "0.1.0"
description = ""
authors = [
    {name = "ranhomri",email = "ran.homri@tensorleap.ai"}
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "numpy (>=2.0,<2.3)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "scikit-learn (<1.8)",
    "pillow (>=12.0.0,<13.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
